<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />

</menu>